TEST_PROGRAMS/VALID/02/validExpressions.go
package main


func main() {

        var y =7;
        var z = 10;

        if x := 5; x < y {
                println("x<y")
        } else if x > z {
                println("x>z")
        } else {
                println("neither")
        }

}

