TEST_PROGRAMS/INVALID/badeqsigns.go
package main

func main(){
    var x = 5;
    var y = 6;

    //space not allowed
    if(y ! = x){ 
        println("y not x");
    }
}
